pop babysitter route

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
 
 <!--   Main stylesheet -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+
+    <link rel="stylesheet" href="node_modules/lib/bootstrap2-toggle.css">
+
 </head>
 <body>
 
@@ -35,6 +38,7 @@
 <!-- Bootstrap JS-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="bundle.js"></script>
+
 
 
 
