--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,13 @@
 
 <!-- Bootstrap JS-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+<!-- jQuery for the toggle button animation -->
+    <script src="./js/toggle-button.js"></script>
+
     <script src="bundle.js"></script>
+
+
 
 
 
