--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- favicon -->
-  <!--   <link rel="icon" href="assets/images/favicon.ico" /> -->
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
 
 <!-- Title -->
     <title>Babysitting Club</title>
